--- a/App/app/src/main/res/xml/card_list_widget_info.xml
+++ b/App/app/src/main/res/xml/card_list_widget_info.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:configure="com.yeager.trelloandroidwidget.CardListWidgetConfigureActivity"
+    android:widgetFeatures="reconfigurable"
     android:description="@string/app_widget_description"
     android:initialKeyguardLayout="@layout/card_list_widget"
     android:initialLayout="@layout/card_list_widget"
