--- a/App/app/src/main/res/layout/card_list_widget.xml
+++ b/App/app/src/main/res/layout/card_list_widget.xml
@@ -5,7 +5,7 @@
     android:theme="@style/Theme.TrelloAndroidWidget.AppWidgetContainer">
 
     <TextView
-        android:id="@+id/appwidget_text"
+        android:id="@+id/user_token_text"
         style="@style/Widget.TrelloAndroidWidget.AppWidget.InnerView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
