--- a/App/app/src/main/res/layout/card_list_widget_configure.xml
+++ b/App/app/src/main/res/layout/card_list_widget_configure.xml
@@ -18,7 +18,7 @@
             android:text="@string/configure" />
 
         <Spinner
-            android:id="@+id/boards_spinner"
+            android:id="@+id/board_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
