--- a/App/app/src/main/res/layout/card_list_widget_configure.xml
+++ b/App/app/src/main/res/layout/card_list_widget_configure.xml
@@ -21,6 +21,12 @@
             android:id="@+id/board_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:id="@+id/list_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"></LinearLayout>
     </LinearLayout>
 
     <LinearLayout
