--- a/App/app/src/main/res/layout/card_list_widget_configure.xml
+++ b/App/app/src/main/res/layout/card_list_widget_configure.xml
@@ -17,6 +17,12 @@
             android:layout_height="wrap_content"
             android:text="@string/configure" />
 
+        <Button
+            android:id="@+id/save_lists_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/save_button" />
+
         <Spinner
             android:id="@+id/board_spinner"
             android:layout_width="match_parent"
