--- a/App/app/src/main/res/layout/card_list_widget_configure.xml
+++ b/App/app/src/main/res/layout/card_list_widget_configure.xml
@@ -17,10 +17,22 @@
             android:layout_height="wrap_content"
             android:text="@string/configure" />
 
+        <Button
+            android:id="@+id/save_lists_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/save_button" />
+
         <Spinner
             android:id="@+id/board_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:id="@+id/list_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"></LinearLayout>
     </LinearLayout>
 
     <LinearLayout
