--- a/App/app/src/main/res/layout/card_list_widget.xml
+++ b/App/app/src/main/res/layout/card_list_widget.xml
@@ -4,16 +4,9 @@
     android:layout_height="match_parent"
     android:theme="@style/Theme.TrelloAndroidWidget.AppWidgetContainer">
 
-    <TextView
-        android:id="@+id/user_token_text"
-        style="@style/Widget.TrelloAndroidWidget.AppWidget.InnerView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_margin="8dp"
-        android:contentDescription="@string/appwidget_text"
-        android:text="@string/appwidget_text"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
+    <ListView
+        android:id="@+id/card_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </RelativeLayout>
